--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
         "prettier-plugin-tailwindcss": "^0.5.12",
         "shadcn-nuxt": "^0.9.0",
         "typescript": "^5.3.3"
-    }
+    },
+    "version": "0.1.0"
 }
